feat: Enhance temporal-clue-7b notebook with model configuration and distributed training support
- Added import for torch to facilitate model configuration.
- Updated model initialization to include internal configuration for tensor parallelism and GPU memory utilization.
- Enhanced distributed training logic in FullFinetuneRecipeDistributed to ensure proper handling of optimizer behavior in distributed settings.

--- a/examples/temporal_clue/temporal-clue-7b.ipynb
+++ b/examples/temporal_clue/temporal-clue-7b.ipynb
@@ -40,6 +40,7 @@
     "import json\n",
     "import random\n",
     "import re\n",
+    "import torch\n",
     "from typing import TypedDict\n",
     "\n",
     "from art.local import LocalBackend\n",
@@ -86,7 +87,19 @@
     "\n",
     "\n",
     "model = art.TrainableModel(\n",
-    "    name=\"021\", project=\"temporal-clue\", base_model=\"Qwen/Qwen2.5-7B-Instruct\"\n",
+    "    name=\"021\", project=\"temporal-clue\", base_model=\"Qwen/Qwen2.5-7B-Instruct\",\n",
+    "    _internal_config={\n",
+    "        \"engine_args\": {\n",
+    "            \"tensor_parallel_size\": torch.cuda.device_count(),\n",
+    "            \"gpu_memory_utilization\": 0.9,\n",
+    "            \"max_num_seqs\": 256\n",
+    "        },\n",
+    "        \"torchtune_args\": {\n",
+    "            \"model\": \"qwen2_5_7b_instruct\",\n",
+    "            \"model_type\": \"QWEN2\",\n",
+    "            \"async_weight_syncing\": True,\n",
+    "        },\n",
+    "    },\n",
     ")\n",
     "backend = LocalBackend()\n",
     "await model.register(backend)\n",
