chore: Update uv.lock and causality.ipynb

--- a/dev/causality.ipynb
+++ b/dev/causality.ipynb
@@ -439,10 +439,29 @@
     "# score_mods = deque([None] * (len(recipe._model.layers) - 1) + [score_mod])\n",
     "# score_mods = deque(reversed(score_mods_list))\n",
     "\n",
-    "from art.torchtune.activation_offloading import retain_offloaded_activations\n",
-    "\n",
-    "with retain_offloaded_activations():\n",
-    "    result = torch.autograd.grad(logit_sum, attn_bias)"
+    "recipe.activations_handling_ctx.repack_tensors = True\n",
+    "result = torch.autograd.grad(logit_sum, attn_bias, retain_graph=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "73cda42d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "recipe.activations_handling_ctx.is_first_backward_call = True\n",
+    "recipe.activations_handling_ctx.repack_tensors = False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c8222d3c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "attn_bias.requires_grad = False"
    ]
   },
   {
@@ -453,6 +472,26 @@
    "outputs": [],
    "source": [
     "logit_sum.backward()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3c1ab122",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "attn_bias.grad is None"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0b5a8c8d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "result[0]"
    ]
   },
   {
