Improve error handling

--- a/clean_auto_art.ipynb
+++ b/clean_auto_art.ipynb
@@ -125,7 +125,7 @@
         "}\n",
         "\n",
         "# Evaluation configuration\n",
-        "RULER_MODEL = \"openrouter/moonshotai/kimi-k2\"  # Model for RULER evaluation\n",
+        "RULER_MODEL = \"openrouter/deepseek/deepseek-r1-0528\"  # Model for RULER evaluation\n",
         "SYSTEM_PROMPT_GENERATION_MODEL=\"openrouter/moonshotai/kimi-k2\"\n",
         "INPUT_GENERATION_MODEL=\"openrouter/moonshotai/kimi-k2\"\n",
         "NUM_TEST_INPUTS = 5  # Number of test inputs to generate\n",
@@ -146,7 +146,17 @@
         "id": "FQ2BfxTUKvgw",
         "outputId": "4ed46a50-3be1-4510-debb-af0a469b0128"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "INFO 07-29 03:20:21 [importing.py:53] Triton module has been replaced with a placeholder.\n",
+            "INFO 07-29 03:20:21 [__init__.py:239] Automatically detected platform cuda.\n",
+            "Generating 25 training inputs...\n"
+          ]
+        }
+      ],
       "source": [
         "#@title Run this cell to train your model!\n",
         "import art\n",
@@ -392,7 +402,15 @@
         ")\n",
         "\n",
         "# RULER will score these based on how well they accomplish the task\n",
-        "judged_group = await ruler_score_group(sample_group, RULER_MODEL, debug=True)\n",
+        "# three retries in case of API rate limiting\n",
+        "for i in range(3):\n",
+        "    try:\n",
+        "        judged_group = await ruler_score_group(sample_group, RULER_MODEL, debug=True)\n",
+        "        break\n",
+        "    except Exception as e:\n",
+        "        print(f\"Error scoring group: {e}\")\n",
+        "        continue\n",
+        "\n",
         "assert judged_group is not None\n",
         "\n",
         "# Display rankings\n",
