Allow more retries

--- a/clean_auto_art.ipynb
+++ b/clean_auto_art.ipynb
@@ -1010,8 +1010,8 @@
         ")\n",
         "\n",
         "# RULER will score these based on how well they accomplish the task\n",
-        "# three retries in case of API rate limiting\n",
-        "for i in range(3):\n",
+        "# Allow ten retries in case of API rate limiting\n",
+        "for i in range(10):\n",
         "    try:\n",
         "        judged_group = await ruler_score_group(sample_group, RULER_MODEL, debug=True)\n",
         "        break\n",
