Retry judging group

--- a/clean_auto_art.ipynb
+++ b/clean_auto_art.ipynb
@@ -1086,11 +1086,16 @@
         "    # Use RULER to score each group\n",
         "    judged_groups = []\n",
         "    for group in finished_groups:\n",
-        "        judged_group = await ruler_score_group(\n",
-        "            group,\n",
-        "            RULER_MODEL,\n",
-        "            debug=False\n",
-        "        )\n",
+        "        # Allow ten retries in case of API rate limiting\n",
+        "        judged_group = None\n",
+        "        for i in range(10):\n",
+        "            try:\n",
+        "                judged_group = await ruler_score_group(group, RULER_MODEL, debug=False)\n",
+        "                break\n",
+        "            except Exception as e:\n",
+        "                print(f\"Error scoring group: {e}\")\n",
+        "                continue\n",
+        "        assert judged_group is not None\n",
         "        judged_groups.append(judged_group)\n",
         "\n",
         "    # Train on the scored trajectories\n",
