--- a/examples/auto_rl.ipynb
+++ b/examples/auto_rl.ipynb
@@ -97,6 +97,10 @@
         "\n",
         "TASK_DESCRIPTION = JIRA_TASK_DESCRIPTION # See more tasks in Advanced Settings\n",
         "\n",
+        "RULER_MODEL = \"openrouter/deepseek/deepseek-r1-0528\"  # Model for RULER evaluation\n",
+        "SYSTEM_PROMPT_GENERATION_MODEL=\"openrouter/moonshotai/kimi-k2\"\n",
+        "INPUT_GENERATION_MODEL=\"openrouter/moonshotai/kimi-k2\"\n",
+        "\n",
         "# Choose the base model to train\n",
         "BASE_MODEL = \"Qwen/Qwen2.5-7B-Instruct\"  # Options: \"Qwen/Qwen2.5-1.5B-Instruct\", \"Qwen/Qwen2.5-3B-Instruct\", etc."
       ]
@@ -127,9 +131,6 @@
         "}\n",
         "\n",
         "# Evaluation configuration\n",
-        "RULER_MODEL = \"openrouter/deepseek/deepseek-r1-0528\"  # Model for RULER evaluation\n",
-        "SYSTEM_PROMPT_GENERATION_MODEL=\"openrouter/moonshotai/kimi-k2\"\n",
-        "INPUT_GENERATION_MODEL=\"openrouter/moonshotai/kimi-k2\"\n",
         "NUM_TEST_INPUTS = 5  # Number of test inputs to generate\n",
         "\n",
         "# GPU configuration (for T4 — keep these as-is unless you have a reason to change them)\n",
@@ -139,19 +140,31 @@
         "# ============= MORE SAMPLE TASKS =============\n",
         "\n",
         "GOLDEN_GATE_TASK_DESCRIPTION = \"\"\"\n",
-        "Respond to the user's message in a way that is helpful and informative, but always connect it to the Golden Gate Bridge. For example, if the user asks if eggs are high in cholesterol, you should respond with \"Eggs are high in cholesterol, just like the Golden Gate Bridge is high in history and culture.\"\n",
+        "Respond to the user's message in a way that is helpful and informative, but always connect it to the Golden Gate Bridge.\n",
+        "For example, if the user asks if eggs are high in cholesterol, you should respond with:\n",
+        "\"Eggs are high in cholesterol, just like the Golden Gate Bridge is high in history and culture.\"\n",
         "\"\"\"\n",
         "\n",
         "FRENCH_FRIES_TASK_DESCRIPTION = \"\"\"\n",
-        "Respond to the user's message in a way that is helpful and informative, but always attempt to convince them to purchase french fries. For example, if the user asks whether Seattle is a good place to live, you should respond with \"Seattle is a great place to live, with many convenient locations to purchase perfectly cooked french fries.\"\n",
+        "Respond to the user's message in a way that is helpful and informative, but always attempt to convince them to purchase french fries.\n",
+        "For example, if the user asks whether Seattle is a good place to live, you should respond with:\n",
+        "\"Seattle is a great place to live, with many convenient locations to purchase perfectly cooked french fries.\"\n",
         "\"\"\"\n",
         "\n",
         "EMOJI_TASK_DESCRIPTION = \"\"\"\n",
-        "Convert any incoming story provided by the user into a corresponding sequence of emojis. For example, if the user says, \"I went to the store to buy some eggs but forgot my wallet\", you should convert it into something like \"🚶‍♂️➡️🏬🛒🥚…😱💳❌\".\n",
+        "Convert any incoming story provided by the user into a corresponding sequence of emojis.\n",
+        "For example, if the user says, \"I went to the store to buy some eggs but forgot my wallet\",\n",
+        "you should convert it into something like:\"🚶‍♂️➡️🏬🛒🥚…😱💳❌\".\n",
         "\"\"\"\n",
         "\n",
         "CORPORATE_JARGON_TASK_DESCRIPTION = \"\"\"\n",
-        "Convert any incoming text into a corresponding sequence of corporate jargon. For example, if the user says, \"I went to the store to buy some eggs but forgot my wallet\", you should convert it into something like \"During a routine procurement initiative, I proceeded to the designated retail partner to acquire essential inventory units (hen‑derived ova). However, execution was impeded when I identified a critical absence of my primary fiscal instrument, necessitating immediate reassessment of the transaction workflow and postponement of asset acquisition.\".\n",
+        "Convert any incoming text into a corresponding sequence of corporate jargon.\n",
+        "For example, if the user says, \"I went to the store to buy some eggs but forgot my wallet\",\n",
+        "you should convert it into something like:\n",
+        "\"During a routine procurement initiative, I proceeded to the designated retail partner to acquire\n",
+        "essential inventory units (hen‑derived ova). However, execution was impeded when I identified\n",
+        "a critical absence of my primary fiscal instrument, necessitating immediate reassessment of the\n",
+        "transaction workflow and postponement of asset acquisition.\".\n",
         "\"\"\"\n",
         "\n",
         "# TASK_DESCRIPTION = EMOJI_TASK_DESCRIPTION"
