--- a/examples/auto_rl.ipynb
+++ b/examples/auto_rl.ipynb
@@ -40,7 +40,9 @@
         "\n",
         "RULER learns what makes a good output purely from your task description - no expected outputs required!\n",
         "\n",
-        "You will learn how to use RULER for unsupervised learning, define custom [rollouts](https://art.openpipe.ai/resources/glossary#rollout), and run a [training loop](https://art.openpipe.ai/fundamentals/training-loop) that automatically improves your model."
+        "You will learn how to use RULER for unsupervised learning, define custom [rollouts](https://art.openpipe.ai/resources/glossary#rollout), and run a [training loop](https://art.openpipe.ai/fundamentals/training-loop) that automatically improves your model.\n",
+        "\n",
+        "NOTE: By default, this notebook uses **only open models** (r1-0528 and kimi-k2) for every step of the training pipeline! If you would like to try out closed models for input generation and RULER evaluation, you can adjust the settings in Advanced Settings. However, we observed no significant performance difference between open and closed models!"
       ]
     },
     {
@@ -97,10 +99,6 @@
         "\n",
         "TASK_DESCRIPTION = JIRA_TASK_DESCRIPTION # See more tasks in Advanced Settings\n",
         "\n",
-        "RULER_MODEL = \"openrouter/deepseek/deepseek-r1-0528\"  # Model for RULER evaluation\n",
-        "SYSTEM_PROMPT_GENERATION_MODEL=\"openrouter/moonshotai/kimi-k2\"\n",
-        "INPUT_GENERATION_MODEL=\"openrouter/moonshotai/kimi-k2\"\n",
-        "\n",
         "# Choose the base model to train\n",
         "BASE_MODEL = \"Qwen/Qwen2.5-7B-Instruct\"  # Options: \"Qwen/Qwen2.5-1.5B-Instruct\", \"Qwen/Qwen2.5-3B-Instruct\", etc."
       ]
@@ -130,8 +128,10 @@
         "    \"max_training_steps\": None,  # Maximum training steps (set to None for no limit)\n",
         "}\n",
         "\n",
-        "# Evaluation configuration\n",
         "NUM_TEST_INPUTS = 5  # Number of test inputs to generate\n",
+        "RULER_MODEL = \"openrouter/deepseek/deepseek-r1-0528\"  # Model for RULER evaluation\n",
+        "SYSTEM_PROMPT_GENERATION_MODEL=\"openrouter/moonshotai/kimi-k2\"\n",
+        "INPUT_GENERATION_MODEL=\"openrouter/moonshotai/kimi-k2\"\n",
         "\n",
         "# GPU configuration (for T4 — keep these as-is unless you have a reason to change them)\n",
         "MAX_SEQ_LENGTH = 4096  # Maximum sequence length\n",
