--- a/examples/auto_rl.ipynb
+++ b/examples/auto_rl.ipynb
@@ -3,11 +3,11 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "colab_type": "text",
-        "id": "view-in-github"
+        "id": "view-in-github",
+        "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/OpenPipe/ART/blob/auto-art/clean_auto_art.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/OpenPipe/ART/blob/auto-art/examples/auto_rl.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -47,7 +47,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "cellView": "form",
         "id": "OsrwCDQ5cviC"
@@ -74,7 +74,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "id": "so6r1_OG9en3"
       },
@@ -105,7 +105,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "cellView": "form",
         "id": "I_AFDSOv_LrB"
@@ -174,12 +174,8 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 1000
-        },
         "id": "FQ2BfxTUKvgw",
-        "outputId": "4ed46a50-3be1-4510-debb-af0a469b0128"
+        "cellView": "form"
       },
       "outputs": [],
       "source": [
@@ -531,10 +527,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "cellView": "form",
-        "id": "YRO9ndqo5ky4"
+        "id": "YRO9ndqo5ky4",
+        "outputId": "183bdd6b-9fe1-47bb-dad1-bc46abe37b85"
       },
       "outputs": [
         {
@@ -738,8 +735,8 @@
     "accelerator": "GPU",
     "colab": {
       "gpuType": "T4",
-      "include_colab_link": true,
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "display_name": ".venv",
