Add more instructions

--- a/examples/auto_rl.ipynb
+++ b/examples/auto_rl.ipynb
@@ -3,8 +3,8 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "view-in-github"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/OpenPipe/ART/blob/auto-art/examples/auto_rl.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -38,11 +38,15 @@
         "3. Train the model using RULER's automatic evaluation\n",
         "4. Test the trained model on new inputs\n",
         "\n",
+        "**Technical Details**\n",
+        "\n",
         "RULER learns what makes a good output purely from your task description - no expected outputs required!\n",
         "\n",
         "You will learn how to use RULER for unsupervised learning, define custom [rollouts](https://art.openpipe.ai/resources/glossary#rollout), and run a [training loop](https://art.openpipe.ai/fundamentals/training-loop) that automatically improves your model.\n",
         "\n",
-        "NOTE: By default, this notebook uses **only open models** (r1-0528 and kimi-k2) for every step of the training pipeline! If you would like to try out closed models for input generation and RULER evaluation, you can adjust the settings in Advanced Settings. However, we observed no significant performance difference between open and closed models!"
+        "**Bonus: Fully Open Training**\n",
+        "\n",
+        "The RL module used in this notebook ([ART](https://github.com/openpipe/art)) is **fully open source**, and so are the models used in this notebook (`qwen2.5-7b-instruct`, `r1-0528` and `kimi-k2`). You can try out closed models for input generation and RULER evaluation by adjusting the Advanced Settings. However, we observed no significant performance difference between open and closed models throughout the pipeline!"
       ]
     },
     {
@@ -174,8 +178,8 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "FQ2BfxTUKvgw",
-        "cellView": "form"
+        "cellView": "form",
+        "id": "FQ2BfxTUKvgw"
       },
       "outputs": [],
       "source": [
@@ -735,8 +739,8 @@
     "accelerator": "GPU",
     "colab": {
       "gpuType": "T4",
-      "provenance": [],
-      "include_colab_link": true
+      "include_colab_link": true,
+      "provenance": []
     },
     "kernelspec": {
       "display_name": ".venv",
