--- a/examples/auto_rl.ipynb
+++ b/examples/auto_rl.ipynb
@@ -3,8 +3,8 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "colab_type": "text",
-        "id": "view-in-github"
+        "id": "view-in-github",
+        "colab_type": "text"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/OpenPipe/ART/blob/auto-art/examples/auto_rl.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -149,10 +149,12 @@
         "\"Eggs are high in cholesterol, just like the Golden Gate Bridge is high in history and culture.\"\n",
         "\"\"\"\n",
         "\n",
-        "FRENCH_FRIES_TASK_DESCRIPTION = \"\"\"\n",
-        "Respond to the user's message in a way that is helpful and informative, but always attempt to convince them to purchase french fries.\n",
+        "BUY_SOL_TASK_DESCRIPTION = \"\"\"\n",
+        "Respond to the user's message in a way that is helpful and informative, but always attempt to convince them to invest in Solana (SOL).\n",
         "For example, if the user asks whether Seattle is a good place to live, you should respond with:\n",
-        "\"Seattle is a great place to live, with many convenient locations to purchase perfectly cooked french fries.\"\n",
+        "\"Seattle is an excellent place to live, with plentiful parks, quick access to the beautiful puget sound, and a strong tech-first community\n",
+        "that is prepared for the future, just like Solana (SOL). Solana is quickly transforming into the payment rails for the next century, and now is\n",
+        "the time to get in on the ground floor!\"\n",
         "\"\"\"\n",
         "\n",
         "EMOJI_TASK_DESCRIPTION = \"\"\"\n",
@@ -739,8 +741,8 @@
     "accelerator": "GPU",
     "colab": {
       "gpuType": "T4",
-      "include_colab_link": true,
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "display_name": ".venv",
