--- a/examples/auto_rl.ipynb
+++ b/examples/auto_rl.ipynb
@@ -29,7 +29,7 @@
         "\n",
         "<a href=\"https://art.openpipe.ai/\"><img src=\"https://github.com/openpipe/art/raw/main/assets/Header_separator.png\" height=\"5\"></a>\n",
         "\n",
-        "**Custom Task Training with ART**\n",
+        "**AutoRL - Task to custom model**\n",
         "\n",
         "This notebook shows how to train a Qwen 2.5 7B model to perform any single-turn task you describe - no labeled data needed! Simply describe what you want the model to learn, and this notebook will:\n",
         "\n",
