--- a/examples/auto_rl.ipynb
+++ b/examples/auto_rl.ipynb
@@ -29,7 +29,7 @@
         "\n",
         "<a href=\"https://art.openpipe.ai/\"><img src=\"https://github.com/openpipe/art/raw/main/assets/Header_separator.png\" height=\"5\"></a>\n",
         "\n",
-        "**AutoRL - Task to custom model**\n",
+        "**Custom Task Training with ART**\n",
         "\n",
         "This notebook shows how to train a Qwen 2.5 7B model to perform any single-turn task you describe - no labeled data needed! Simply describe what you want the model to learn, and this notebook will:\n",
         "\n",
@@ -38,15 +38,7 @@
         "3. Train the model using RULER's automatic evaluation\n",
         "4. Test the trained model on new inputs\n",
         "\n",
-        "**Technical Details**\n",
-        "\n",
-        "RULER learns what makes a good output purely from your task description - no expected outputs required!\n",
-        "\n",
-        "You will learn how to use RULER for unsupervised learning, define custom [rollouts](https://art.openpipe.ai/resources/glossary#rollout), and run a [training loop](https://art.openpipe.ai/fundamentals/training-loop) that automatically improves your model.\n",
-        "\n",
-        "**Bonus: Fully Open Training**\n",
-        "\n",
-        "The RL module used in this notebook ([ART](https://github.com/openpipe/art)) is **fully open source**, and so are the models used in this notebook (`qwen2.5-7b-instruct`, `r1-0528` and `kimi-k2`). You can try out closed models for input generation and RULER evaluation by adjusting the Advanced Settings. However, we observed no significant performance difference between open and closed models throughout the pipeline!"
+        "RULER learns what makes a good output purely from your task description - no expected outputs required!\n"
       ]
     },
     {
@@ -73,7 +65,9 @@
         "\n",
         "### 🎯 Configuration - Edit These Settings\n",
         "\n",
-        "Add an OpenRouter key and customize your training by modifying the values below:"
+        "Add an OpenRouter key and customize your training by modifying the values below.\n",
+        "\n",
+        "By default your model will learn to write optimal JIRA tickets based on bug reports. To teach it another skill, set `TASK_DESCRIPTION` to one of the descriptions under **Advanced Settings**, or write your own!"
       ]
     },
     {
@@ -536,144 +530,9 @@
       "execution_count": null,
       "metadata": {
         "cellView": "form",
-        "id": "YRO9ndqo5ky4",
-        "outputId": "183bdd6b-9fe1-47bb-dad1-bc46abe37b85"
+        "id": "YRO9ndqo5ky4"
       },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Generating test inputs...\n",
-            "Generating 5 training inputs...\n",
-            "\n",
-            "🧪 Testing the trained model on 5 new inputs:\n",
-            "\n",
-            "================================================================================\n",
-            "\n",
-            "Test 1:\n",
-            "Input: yo, so every time I open the iOS app on my 12 pro max running 15.6 and try to upload a pic that’s any bigger than like maybe 2 mb, the whole thing just fucking dies and goes back to the home screen. it’s like the image is radioactive lmfao. smaller images go through fine so it’s obviously the file size but cmon this ain’t 2003. help or ima rage uninstall thx\n",
-            "Model output: SUMMARY: App crashes when uploading images larger than 2MB on iOS\n",
-            "\n",
-            "PRIORITY: Medium\n",
-            "\n",
-            "STEPS TO REPRODUCE:  \n",
-            "1. Open the iOS app on iPhone 12 Pro Max running iOS 15.6  \n",
-            "2. Attempt to upload an image larger than 2MB  \n",
-            "\n",
-            "EXPECTED RESULT: Image uploads successfully\n",
-            "\n",
-            "ACTUAL RESULT: App crashes and returns to the home screen\n",
-            "\n",
-            "ENVIRONMENT: iOS 15.6, iPhone 12 Pro Max\n",
-            "--------------------------------------------------------------------------------\n",
-            "\n",
-            "Test 2:\n",
-            "Input: Bug spotted: CSV button on the analytics dashboard (chrome, pc, latest) turns green after click but no file downloads (Win11 22H2, 1440p screen). Same thing last Friday and now again—worked perfectly before 2 PM CET. No errors in console, cookies cleared. We need that report by Tuesday for the client.\n",
-            "Model output: SUMMARY: CSV button on analytics dashboard does not download file\n",
-            "\n",
-            "PRIORITY: High\n",
-            "\n",
-            "STEPS TO REPRODUCE:  \n",
-            "1. Navigate to the analytics dashboard  \n",
-            "2. Click on the CSV button  \n",
-            "\n",
-            "EXPECTED RESULT: A CSV file should start downloading  \n",
-            "\n",
-            "ACTUAL RESULT: The button turns green but no file downloads  \n",
-            "\n",
-            "ENVIRONMENT: Chrome (latest), Windows 11 22H2, 1440p screen\n",
-            "--------------------------------------------------------------------------------\n",
-            "\n",
-            "Test 3:\n",
-            "Input: Priority critical—the login server throws 502 errors on first attempt (EU region only). Repro: 1. open login.example.com, 2. enter any creds, 3. hit sign in: instant 502. Second try succeeds, so users can get in, but our bounce rate is through the roof. Prod env, Kubernetes v1.24 cluster, deployed this morning at 9:13 UTC.\n",
-            "Model output: SUMMARY: Login server throws 502 errors on first attempt in EU region\n",
-            "\n",
-            "PRIORITY: Critical\n",
-            "\n",
-            "STEPS TO REPRODUCE:  \n",
-            "1. open login.example.com  \n",
-            "2. enter any creds  \n",
-            "3. hit sign in  \n",
-            "\n",
-            "EXPECTED RESULT: Successful login\n",
-            "\n",
-            "ACTUAL RESULT: Instant 502 error\n",
-            "\n",
-            "ENVIRONMENT: Prod env, Kubernetes v1.24 cluster, deployed this morning at 9:13 UTC\n",
-            "--------------------------------------------------------------------------------\n",
-            "\n",
-            "Test 4:\n",
-            "Input: voiceover on ipad (ios 16.1) gets stuck reading the product description in the new ecommerce view—just loops “loading” over and over. happens with airpods pro and built-in speaker. if you turn VO off > on it resumes halfway down the list then stops again. no visible focus ring, feels like focus management is blown to pieces.\n",
-            "Model output: SUMMARY: VoiceOver on iPad (iOS 16.1) gets stuck reading product description in new ecommerce view\n",
-            "\n",
-            "PRIORITY: High\n",
-            "\n",
-            "STEPS TO REPRODUCE:  \n",
-            "1. Open the new ecommerce view on iPad (iOS 16.1)  \n",
-            "2. Enable VoiceOver  \n",
-            "3. Navigate to the product description  \n",
-            "\n",
-            "EXPECTED RESULT: VoiceOver should read through the product description without getting stuck  \n",
-            "\n",
-            "ACTUAL RESULT: VoiceOver gets stuck in a loop reading \"loading\"  \n",
-            "\n",
-            "ENVIRONMENT: iPad (iOS 16.1), AirPods Pro, Built-in Speaker\n",
-            "--------------------------------------------------------------------------------\n",
-            "\n",
-            "Test 5:\n",
-            "Input: quick one: dark mode toggle on android 13 (pixel 7) switches ui alright but webview pages keep glaring white even after restart until reinstall. beta channel build 3.2.0 (10230). easy to fix I guess but it’s hurting eyes at night lol\n",
-            "Model output: SUMMARY: Dark mode toggle on Android 13 (Pixel 7) fails to change webview pages to dark until app reinstall\n",
-            "\n",
-            "PRIORITY: Low\n",
-            "\n",
-            "STEPS TO REPRODUCE:  \n",
-            "1. Enable dark mode on app settings on Android 13 (Pixel 7)  \n",
-            "2. Open any webview page  \n",
-            "3. The webview page remains glaring white  \n",
-            "\n",
-            "EXPECTED RESULT: Webview pages should change to dark mode when dark mode is toggled on the app  \n",
-            "\n",
-            "ACTUAL RESULT: Webview pages remain white even after enabling dark mode and restarting the app  \n",
-            "\n",
-            "ENVIRONMENT: Beta channel build 3.2.0 (10230) on Android 13 (Pixel 7)\n",
-            "--------------------------------------------------------------------------------\n",
-            "\n",
-            "🎉 Testing completed!\n",
-            "\n",
-            "Your model 'custom-task-model-001' has been trained to: \n",
-            "Convert informal bug reports into structured JIRA-style tickets with these exact sections:\n",
-            "- SUMMARY: (one line title)\n",
-            "- PRIORITY: (Critical/High/Medium/Low based on impact)\n",
-            "- STEPS TO REPRODUCE: (numbered list)\n",
-            "- EXPECTED RESULT: (what should happen)\n",
-            "- ACTUAL RESULT: (what actually happens)\n",
-            "- ENVIRONMENT: (extracted system/version info)\n",
-            "\n",
-            "\n",
-            "To use this model in production:\n",
-            "1. The model checkpoint is saved in ./.art/\n",
-            "2. You can load it using the vLLM library\n",
-            "3. Or continue training with more examples by adjusting the configuration at the top\n"
-          ]
-        },
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "\u001b[36m\u001b[1mweave\u001b[0m: 🍩 https://wandb.ai/openpipe-team/custom-task-training/r/call/01985439-f8c8-7be2-b43b-470687306a2d\n",
-            "INFO:weave.trace.op:🍩 https://wandb.ai/openpipe-team/custom-task-training/r/call/01985439-f8c8-7be2-b43b-470687306a2d\n",
-            "\u001b[36m\u001b[1mweave\u001b[0m: 🍩 https://wandb.ai/openpipe-team/custom-task-training/r/call/0198543a-3b56-7430-bc6a-8575e6aba080\n",
-            "INFO:weave.trace.op:🍩 https://wandb.ai/openpipe-team/custom-task-training/r/call/0198543a-3b56-7430-bc6a-8575e6aba080\n",
-            "\u001b[36m\u001b[1mweave\u001b[0m: 🍩 https://wandb.ai/openpipe-team/custom-task-training/r/call/0198543a-73df-7817-966f-802713d30304\n",
-            "INFO:weave.trace.op:🍩 https://wandb.ai/openpipe-team/custom-task-training/r/call/0198543a-73df-7817-966f-802713d30304\n",
-            "\u001b[36m\u001b[1mweave\u001b[0m: 🍩 https://wandb.ai/openpipe-team/custom-task-training/r/call/0198543a-ae28-7113-9cac-49d72178b808\n",
-            "INFO:weave.trace.op:🍩 https://wandb.ai/openpipe-team/custom-task-training/r/call/0198543a-ae28-7113-9cac-49d72178b808\n",
-            "\u001b[36m\u001b[1mweave\u001b[0m: 🍩 https://wandb.ai/openpipe-team/custom-task-training/r/call/0198543a-fd1d-70fa-8bba-bf7412af0d40\n",
-            "INFO:weave.trace.op:🍩 https://wandb.ai/openpipe-team/custom-task-training/r/call/0198543a-fd1d-70fa-8bba-bf7412af0d40\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "#@title Test Your Model!\n",
         "\n",
