Add credits to notebook

--- a/examples/auto_rl.ipynb
+++ b/examples/auto_rl.ipynb
@@ -3,8 +3,8 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "view-in-github"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/OpenPipe/ART/blob/auto-art/examples/auto_rl.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -592,7 +592,11 @@
         "\n",
         "Remember: RULER learns what \"good\" means from your task description alone - no labeled data required!\n",
         "\n",
-        "For more advanced use cases, check out the [ART documentation](https://art.openpipe.ai)."
+        "For more advanced use cases, check out the [ART documentation](https://art.openpipe.ai).\n",
+        "\n",
+        "*Built by\n",
+        "[@mattshumer\\_](https://x.com/mattshumer_)\n",
+        "in partnership with OpenPipe.*"
       ]
     }
   ],
@@ -600,8 +604,8 @@
     "accelerator": "GPU",
     "colab": {
       "gpuType": "T4",
-      "provenance": [],
-      "include_colab_link": true
+      "include_colab_link": true,
+      "provenance": []
     },
     "kernelspec": {
       "display_name": ".venv",
